[add] 容错机制、重试机制