@@ -35,27 +35,42 @@ public class VertxTcpServerHandler implements Handler<NetSocket> {
 
             ProtocolMessage.Header header = new ProtocolMessage.Header();
 
-            //处理请求，调用服务，获得返回体
+            SerializerEnums serializerEnums = SerializerEnums.of(RpcApplication.getRpcConfig().getSerializer());
+            if (serializerEnums == null) {
+                throw new RuntimeException("序列化器不存在");
+            }
+            header.setSerializer((byte) serializerEnums.getType());
+
+            ProtocolMessage<RpcResponse> protocolMessage = null;
+
             try {
+                //处理请求，调用服务，获得返回体
                 RpcResponse rpcResponse = handleRequest(buffer, header);
 
-                SerializerEnums serializerEnums = SerializerEnums.of(RpcApplication.getRpcConfig().getSerializer());
-                if (serializerEnums == null) {
-                    throw new RuntimeException("序列化器不存在");
-                }
-
-                header.setSerializer((byte) serializerEnums.getType());
                 header.setType((byte) MessageTypeEnums.RESPONSE.getType());
+                header.setStatus((byte) MessageStatusEnums.OK.getType());
 
-                ProtocolMessage<RpcResponse> protocolMessage = new ProtocolMessage<>(header, rpcResponse);
+                protocolMessage = new ProtocolMessage<>(header, rpcResponse);
 
-                //编码器编码，并对请求体进行序列化
-                Buffer encode = ProtocolMessageEncoder.encode(protocolMessage);
-
-                //响应请求
-                netSocket.write(encode);
             } catch (Exception e) {
-                log.error("调用服务失败:{}", e.getMessage());
+                //报错，返回报错信息
+                e.printStackTrace();
+                log.error("调用服务失败:{}", e.getCause().getMessage());
+                RpcResponse rpcResponse = new RpcResponse();
+                rpcResponse.setMessage(String.format("调用服务失败：%s", e.getCause().getMessage()));
+                rpcResponse.setExceptionClassName(e.getClass().getName());
+
+                header.setType((byte) MessageTypeEnums.RESPONSE.getType());
+                header.setStatus((byte) MessageStatusEnums.RESPONSE_FAILED.getType());
+
+                protocolMessage = new ProtocolMessage<>(header, rpcResponse);
+            } finally {
+                if (protocolMessage != null) {
+                    //编码器编码，并对请求体进行序列化
+                    Buffer encode = ProtocolMessageEncoder.encode(protocolMessage);
+                    //响应请求
+                    netSocket.write(encode);
+                }
             }
         }));
     }
@@ -75,15 +90,8 @@ public class VertxTcpServerHandler implements Handler<NetSocket> {
         }
         Method method = serviceClass.getMethod(rpcRequest.getMethodName(), rpcRequest.getParamTypes());
         Object result = null;
-        try {
-            //class.newInstance()在java9已经标为废弃，因其只能创建有无参构造器的对象的局限性
-            result = method.invoke(serviceClass.getConstructor().newInstance(), rpcRequest.getParams());
-        } catch (Exception e) {
-            rpcResponse.setMessage(e.getMessage());
-            rpcResponse.setException(e);
-            header.setStatus((byte) MessageStatusEnums.RESPONSE_FAILED.getType());
-            log.error("Web服务器，调用方法时报错：{}", e.getMessage());
-        }
+        //class.newInstance()在java9已经标为废弃，因其只能创建有无参构造器的对象的局限性
+        result = method.invoke(serviceClass.getConstructor().newInstance(), rpcRequest.getParams());
         //构造返回对象
         rpcResponse.setData(result);
         rpcResponse.setDataType(method.getReturnType());
